<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kode.recipes.presentation.recipe.RecipeDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.recipe.RecipeDetailsFragment">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imageViewPager"
                android:layout_width="0dp"
                android:transitionName="viewPager"
                android:layout_height="256dp"
                app:items="@{viewModel.recipeDetails.imagesUrls}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/purple_200" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/imageCountTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@id/imageViewPager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabBackground="@drawable/tab_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp"
                app:tabMaxWidth="8dp" />

            <TextView
                android:id="@+id/nameView"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/def_margin"
                android:layout_marginTop="@dimen/def_margin"
                android:layout_marginEnd="4dp"
                android:text="@{viewModel.recipeDetails.name}"
                app:layout_constraintEnd_toStartOf="@id/lastUpdatedView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewPager"
                tools:text="Pan Roasted Chicken with Lemon, Garlic, Green Beans and Red Potatoes" />

            <TextView
                android:id="@+id/lastUpdatedView"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/def_margin"
                android:text="@{viewModel.recipeDetails.lastUpdatedSimple}"
                app:layout_constraintBottom_toBottomOf="@id/nameView"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="01.05.2018" />

            <TextView
                android:id="@+id/descriptionView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:text="@{viewModel.recipeDetails.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameView"
                tools:text="Pan-roasted chicken with lemon, garlic, green beans and red potatoes" />

            <TextView
                android:id="@+id/difficultyTitleView"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:text="@string/difficulty"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionView" />

            <RatingBar
                android:id="@+id/difficultyView"
                style="@style/difficulty_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/def_margin"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:rating="@{viewModel.recipeDetails.difficulty}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/difficultyTitleView"
                tools:rating="3" />

            <TextView
                android:id="@+id/instructionsTitleView"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:text="@string/instruction_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/difficultyView" />

            <TextView
                android:id="@+id/instructionsView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:text="@{viewModel.recipeDetails.instructions}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructionsTitleView"
                tools:text="1. Preheat the oven to 230deg C. Coat a large baking dish or cast-iron
                skillet with 1 tbs of olive oil. Arrange the lemon slices in a single layer
                in the bottom of the dish or skillet." />

            <TextView
                android:id="@+id/recommendedTitleView"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_margin"
                android:text="@string/recommended_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructionsView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendedRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="@dimen/def_margin"
                app:items="@{viewModel.recipeDetails.similar}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recommendedTitleView"
                app:onClick="@{viewModel.onRecommendedItemClicked}"
                tools:listitem="@layout/item_recommended_recipe" />

            <include
                android:id="@+id/progressBarLayout"
                layout="@layout/layout_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isLoading="@{viewModel.isLoading}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>